jakselv2/parser.ts
import { ParseError, type ErrorReporter } from "./error";
import { Token, TokenType } from "./token";
import { type Expr, Binary, Unary, Grouping, Literal, type Stmt, Print, Expression, Var, Variable } from './ast'

export class Parser {
    private current: number = 0
    constructor(
        private errorReporter: ErrorReporter,
        private tokens: Array<Token>,
    ) {}

    parse(): Array<Stmt | null> {
        const statements: Array<Stmt | null> = [];
        while (!this.isAtEnd()) {
            statements.push(this.declaration());
        }
        return statements;
    }

    private expression(): Expr {
        return this.equality();
    }

    private declaration(): Stmt | null {
        try {
            if (this.match(TokenType.LITERALLY)) return this.varDeclaration();
            return this.statement();
        } catch (err) {
            if (err instanceof ParseError) {
                this.synchronize();
                return null;
            }
            throw err;
        }
    }

    private statement(): Stmt {
        if (this.match(TokenType.SPILL)) return this.spillStatement();
        return this.expressionStatement();
    }

    private spillStatement(): Stmt {
        const value = this.expression();
        this.consume([TokenType.NEWLINE, TokenType.EOF], "Expect newline after value.");
        return new Print(value);
    }

    private varDeclaration(): Stmt {
        const name = this.consume(TokenType.IDENTIFIER, "Expect variable name.");
        let initializer = null;
        if (this.match(TokenType.ITU)) {
            initializer = this.expression();
        }
        this.consume(TokenType.NEWLINE, "Expect newline after variable declaration.");
        return new Var(name, initializer);
    }

    private expressionStatement(): Stmt {
        const expr = this.expression();
        this.consume([TokenType.NEWLINE, TokenType.EOF], "Expect newline after expression.");
        return new Expression(expr);
    }

    private equality(): Expr {
        let expr = this.comparison();
        while (this.match(TokenType.BANG_EQUAL, TokenType.EQUAL_EQUAL)) {
            const operator = this.previous();
            const right = this.comparison();
            expr = new Binary(expr, operator, right);
        }
        return expr;
    }

    private comparison(): Expr {
        let expr = this.term();
        while (this.match(TokenType.GREATER, TokenType.GREATER_EQUAL, TokenType.LESS, TokenType.LESS_EQUAL)) {
            const operator = this.previous();
            const right = this.term();
            expr = new Binary(expr, operator, right);
        }
        return expr;
    }

    private term(): Expr {
        let expr = this.factor();
        while (this.match(TokenType.MINUS, TokenType.PLUS)) {
            const operator = this.previous();
            const right = this.factor();
            expr = new Binary(expr, operator, right);
        }
        return expr;
    }

    private factor(): Expr {
        let expr = this.unary();
        while (this.match(TokenType.STAR, TokenType.SLASH)) {
            const operator = this.previous();
            const right = this.unary();
            expr = new Binary(expr, operator, right);
        }
        return expr;
    }

    private unary(): Expr {
        if (this.match(TokenType.BANG, TokenType.MINUS)) {
            const operator = this.previous();
            const right = this.unary();
            return new Unary(operator, right);
        }
        return this.primary();
    }

    private primary(): Expr {
        if (this.match(TokenType.FALSE)) {
            return new Literal(false);
        }
        if (this.match(TokenType.TRUE)) {
            return new Literal(true);
        }
        if (this.match(TokenType.NIL)) {
            return new Literal(null);
        }
        if (this.match(TokenType.NUMBER, TokenType.STRING)) {
            return new Literal(this.previous().literal)
        }
        if (this.match(TokenType.IDENTIFIER)) {
            return new Variable(this.previous());
        }
        if (this.match(TokenType.LEFT_PAREN)) {
            const expr = this.expression();
            this.consume(TokenType.RIGHT_PAREN, "Expect ')' after expression.");
            return new Grouping(expr);
        }
        throw this.error(this.peek(), "Expect expression.");
    }

    private match(...types: TokenType[]): boolean {
        for (const type of types) {
            if(this.check(type)) {
                this.advance();
                return true;
            }
        }
        return false;
    }

    private consume(types: TokenType | Array<TokenType>, message: string) {
        if (Array.isArray(types)) {
            for (const type of types) {
                if ((this.isAtEnd() && type === TokenType.EOF) || this.check(type)) {
                    return this.advance();
                }
            }
        } else {
            if (this.check(types)) {
                return this.advance();
            }
        }
        throw this.error(this.peek(), message);
    }

    private error(token: Token, message: string) {
        this.errorReporter.error(token, message);
        return new ParseError();
    }

    private synchronize(): void {
        this.advance();
        while (!this.isAtEnd()) {
            if (this.previous().type === TokenType.NEWLINE) {
                return;
            }
            switch (this.peek().type) {
                case TokenType.NEWLINE:
                case TokenType.FOMO:
                case TokenType.SPILL:
                case TokenType.SO:
                    return;
            }
        }
        this.advance();
    }

    private check(type: TokenType): boolean {
        if (this.isAtEnd()) {
            return false;
        }
        return this.peek().type === type;
    }

    private advance(): Token {
        if (!this.isAtEnd()) {
            this.current++;
        }
        return this.previous();
    }

    private isAtEnd(): boolean {
        return this.peek().type === TokenType.EOF;
    }

    private peek(): Token {
        return this.tokens[this.current]!
    }

    private previous(): Token {
        return this.tokens[this.current - 1]!
    }
}
